@@ -28,9 +28,12 @@ export AMAVISD_QUARANTINE_PORT='9998'
 export AMAVISD_LOGFILE='/var/log/amavisd.log'
 export AMAVISD_LOGROTATE_FILE="${LOGROTATE_DIR}/amavisd"
 export AMAVISD_DKIM_SELECTOR='dkim'
-export AMAVISD_DKIM_DIR='/var/lib/dkim'
 export AMAVISD_RC_SCRIPT_NAME='amavisd'
 
+# Num of pre-forked children.
+export AMAVISD_MAX_SERVERS='10'
+
+export AMAVISD_DKIM_DIR='/var/lib/dkim'
 export AMAVISD_VIRUSMAILS_DIR='/var/virusmails'
 
 # Database used to store incoming & outgoing email related information.
